# todoist-costs

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: test.yml
docs/: index.md
tests/test_example/: test_some_function.py
todoist_costs/: __init__.py  cli.py  errors.py  finance.py  models.py  remote.py  ui.py
