[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
todoist-costs = "todoist_costs:cli"

[tool.poetry]
name = "todoist-costs"
description = "Use Todoist for financial planning."
version = "0.1.0"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/anatoly-scherbakov/todoist-costs"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
rich = "^12.3.0"
typer = "^0.4.1"
todoist-api-python = "^1.1.1"
click = "<8.2.0"
urlpath = "^1.2.0"
pendulum = "^2.1.2"
CurrencyConverter = "^0.16.11"
money = "^1.3.0"

[tool.poetry.dev-dependencies]
mypy = "^0.950"

wemake-python-styleguide = "^0.16"
flake8-pytest-style = "^1.6"

safety = "^1.10"

pytest = "^7.1"
pytest-cov = "^3.0"
pytest-randomly = "^3.11"

flakehell = "^0.9.0"

[tool.flakehell]
base = "https://raw.githubusercontent.com/Recall-Masters/standards/main/pyproject.toml"
