[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
todoist-costs = "todoist_costs:cli"

[tool.poetry]
name = "todoist-costs"
description = "Use Todoist for financial planning."
version = "0.1.0"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/anatoly-scherbakov/todoist-costs"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
rich = "^13.7.1"
typer = "^0.12.3"
todoist-api-python = "^2.1.2"
click = "<8.2.0"
urlpath = "^1.2.0"
pendulum = "^3.0.0"
CurrencyConverter = "^0.17.21"
money = "^1.3.0"
documented = "^0.1.4"

[tool.poetry.dev-dependencies]
mypy = "^1.10"

wemake-python-styleguide = "^0.19"
flake8-pytest-style = "^2.0"

safety = "^3.2"

pytest = "^8.2"
pytest-cov = "^4.1"
pytest-randomly = "^3.15"

flakehell = "^0.9.0"

[tool.flakehell]
base = "https://raw.githubusercontent.com/Recall-Masters/standards/main/pyproject.toml"
